"restart" and "update a file" links was overlapped by user-tools links. Now you can click in both links. Fixes #1173.
git-svn-id: https://svn.merengueproject.org/trunk@2860 5c12d508-d76f-0410-91c7-e3e856e0eb0f

--- a/merengueproj/merengue/media/css/admin.css
+++ b/merengueproj/merengue/media/css/admin.css
@@ -17,7 +17,7 @@ div#header img#merengue_logo {
 }
 
 #user-tools {
-	padding: 2em 10px;
+    padding: 2em 10px 1em 10px;
 }
 
 /*---- other styles ----*/
