--- a/merengueproj/merengue/themes/merengue/media/admin/css/admin.css
+++ b/merengueproj/merengue/themes/merengue/media/admin/css/admin.css
@@ -37,10 +37,6 @@ div#header img#merengue_logo {
     width: 30em;
 }
 
-#user-tools {
-	padding: 2em 10px;
-}
-
 .module-merengue h1,
 #content-related .module h2,
 .merengueadmin .module h2,
